--- a/checkout.html
+++ b/checkout.html
@@ -23,7 +23,7 @@
       <div class="header-content">
         <div class="checkout-header-left-section">
           <a href="amazon.html">
-            <img class="amazon-logo" src="images/amazon-logo.png">
+            <img class="amazon-logo" src="images/mut1.png">
             <img class="amazon-mobile-logo" src="images/amazon-mobile-logo.png">
           </a>
         </div>
