--- a/checkout.html
+++ b/checkout.html
@@ -22,9 +22,9 @@
     <div class="checkout-header">
       <div class="header-content">
         <div class="checkout-header-left-section">
-          <a href="amazon.html">
+          <a href="index.html">
             <img class="amazon-logo" src="images/mut1.png">
-            <img class="amazon-mobile-logo" src="images/amazon-mobile-logo.png">
+            <img class="amazon-mobile-logo" src="images/mut.png">
           </a>
         </div>
 
