--- a/seller.html
+++ b/seller.html
@@ -92,12 +92,12 @@
   <body>
      <div class="amazon-header">
       <div class="amazon-header-left-section">
-        <a href="amazon.html" class="header-link">
+        <a href="index.html" class="header-link">
           <img class="amazon-logo"
             src="images/mut1.png">
           <img class="amazon-mobile-logo"
-            src="images/amazon-mobile-logo-white.png">
-        </a>
+            src="images/mut.png">
+        </a>e
       </div>
 
       <div class="amazon-header-middle-section">
