update seller html and the order summary

--- a/checkout.html
+++ b/checkout.html
@@ -55,6 +55,12 @@
     </div>
     
 
+    <!-- Trust Banner (inside container, above the form) -->
+<div style="background: #f9edbe; color: #222; padding: 10px; text-align: center; border: 1px solid #f0c36d; font-weight: bold; margin-bottom: 15px;">
+  ⚠️ This site is safe. No payments are collected here. WhatsApp is only used to communicate your order.
+</div>
+
+
     <script type="module" src="scripts/checkout.js"></script>
   </body>
 </html>
