Update the title and the header css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Amazon Project</title>
+    <title>mutsoko</title>
 
     <!-- This code is needed for responsive design to work.
       (Responsive design = make the website look good on
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="amazon-header">
-      <div class="amazon-header-left-section">
+      <div class="amazon-header-left-sectio">
         <a href="index.html" class="header-link">
           <img class="amazon-logo"
             src="images/mut.png">
@@ -28,7 +28,7 @@
             src="images/mut.png">
         </a>
       </div>
-
+      
       <div class="amazon-header-middle-section">
         <input class="search-bar" type="text" placeholder="Search">
 
@@ -38,7 +38,12 @@
       </div>
 
       <div class="amazon-header-right-section">
-        <a class="orders-link header-link" href="seller.html">
+        <a class="orders-link header-link" href="guide.html">
+          <span class="returns-text">User</span>
+          <span class="orders-text">. Guide</span>
+        </a>
+        
+        <a class="orders-link header-link" href="terms.html">
           <span class="returns-text">TERMS</span>
           <span class="orders-text">& Conditions</span>
         </a>
