--- a/seller.html
+++ b/seller.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Orders</title>
+    <title>selling</title>
 
     <!-- This code is needed f0r responsive design to work.
       (Responsive design = make the website look good on
@@ -97,7 +97,7 @@
             src="images/mut1.png">
           <img class="amazon-mobile-logo"
             src="images/mut.png">
-        </a>e
+        </a>
       </div>
 
       <div class="amazon-header-middle-section">
@@ -182,7 +182,7 @@
 
   <!-- Trust banner at the top -->
   <div style="background: #f9edbe; color: #222; padding: 10px; text-align: center; border: 1px solid #f0c36d; font-weight: bold; margin-bottom: 15px;">
-    ⚠️ This site is safe. No payments are collected here. WhatsApp is only used to communicate your order.
+    ⚠️ This site is safe. No payments are collected here. WhatsApp is only used to communicate what you are selling.
   </div>
 
   <form id="sellForm">
