Update the terms and guide file

--- a/guide.html
+++ b/guide.html
@@ -89,21 +89,22 @@
     <li>To view or manage your cart, click the cart icon at the top right of the page.</li>
     <li>You can remove items from the cart if you change your mind.</li>
     <li>Check the total price for all items in your cart.</li>
-    <li>Click <strong>"Place Your Order"</strong> to be redirected to <strong>Alex Mwangi's WhatsApp</strong> with your order details.</li>
-    <li>Send the message on WhatsApp. Alex will confirm the items and help you communicate with the seller.</li>
+    <li>Click <strong>"Place Your Order"</strong> to be redirected to <strong>Mr John's WhatsApp</strong> with your order details.</li>
+    <li>Send the message on WhatsApp. Mr John will confirm the items and help you communicate with the seller.</li>
+    <li>To go back to the products, click the <strong>MutSoko</strong> icon in the top left corner of the page.</li>
   </ol>
 
   <h3>For Sellers:</h3>
   <ol>
     <li>Click <strong>"Sell Product"</strong> in the navigation menu.</li>
     <li>Fill in the <strong>item name, price, and description</strong>.</li>
-    <li>Do not upload images here. Images are sent later via WhatsApp to Alex.</li>
-    <li>Click <strong>"Submit"</strong> to be redirected to <strong>Alex Mwangi's WhatsApp</strong>.</li>
-    <li>Send the product image via WhatsApp and discuss the listing with Alex.</li>
+    <li>Do not upload images here. Images are sent later via WhatsApp to Mr John.</li>
+    <li>Click <strong>"Submit"</strong> to be redirected to <strong>Mr John's WhatsApp</strong>.</li>
+    <li>Send the product image via WhatsApp and discuss the listing with Mr John.</li>
     <li>Once approved, your item will appear on the marketplace for buyers.</li>
   </ol>
 
-  <p><strong>Note:</strong> Always follow the <strong>Terms & Conditions</strong>. Alex Mwangi only facilitates communication to make buying and selling safe and simple.</p> <br>
+  <p><strong>Note:</strong> Always follow the <strong>Terms & Conditions</strong>. Mr John only facilitates communication to make buying and selling safe and simple.</p> <br>
 </main>
 
 
