--- a/terms.html
+++ b/terms.html
@@ -75,14 +75,15 @@
   <p>Welcome to our student marketplace. To ensure safe and smooth transactions, please follow these rules:</p>
   <ul>
     <li>Do <strong>not make any payment</strong> before seeing the item in person.</li>
-    <li>All communication is facilitated by <strong>Alex Mwangi — Your Marketplace Assistant</strong>. He is not selling or buying items himself.</li>
-    <li>When submitting a product as a seller, images are sent via WhatsApp after you contact Alex.</li>
+    <li>All communication is facilitated by <strong>Mr John — Your Marketplace Assistant</strong>. He is not selling or buying items himself.</li>
+    <li>When submitting a product as a seller, images are sent via WhatsApp after you contact Mr John.</li>
     <li>Buyers should confirm item details (price, quantity, condition) before agreeing to purchase.</li>
     <li>Always be honest and respectful in your dealings. Fraudulent activity will be reported.</li>
-    <li>Alex Mwangi only acts as a middleman. He is not responsible for payments or delivery.</li>
+    <li>Mr John only acts as a middleman. He will connect buyers and sellers but is not responsible for payments or delivery.</li>
     <li>If you encounter suspicious activity or issues, report them immediately via WhatsApp. <a href="tel:+254115955552">phone number</a></li>
   </ul>
   <p>By using this website, you agree to follow these terms and transact responsibly.</p>
+  <p>THANK YOU FOR USING OUR MARKETPLACE!</p>
 </div>
 
 </body>
